Fix z-index values.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,6 +46,7 @@ a {
 
 section {
     position: relative;
+    z-index: 1;
     height: 100vh;
     width: 100vw;
     flex-shrink: 0;
@@ -65,6 +66,7 @@ section {
 
 #slideshow {
     position: relative;
+    z-index: 1;
     width: 100vw;
     height: 100vh;
     top: 0;
@@ -73,7 +75,7 @@ section {
 
 #slideshow img {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100vw;
